Bug 180223 - Rating images misbehaves when entering an album via "go to album" from another view
Summary: Rating images misbehaves when entering an album via "go to album" from anothe...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Rating (other bugs)
Version First Reported In: 0.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-10 10:31 UTC by Andi Clemens
Modified: 2017-08-14 21:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andi Clemens 2009-01-10 10:31:29 UTC
Version:           0.10.0-rc1 (using 4.1.87 (KDE 4.1.87 (KDE 4.2 >= 20090101)), Arch Linux)
Compiler:          gcc
OS:                Linux (i686) release 2.6.27-ARCH

Ok this is a bad title :-) But I don't know how to say it in one sentence.

Today I found a nasty little bug that only seems to disappear when restarting digiKam.
If you are in another view then "Albums" and you select a thumbnail and click on "Go to album" in its context menu, digiKam will display the album of the selected image. That is ok.
If you rate another image in this album view now, the one that was selected when coming to the album via "go to album" will be highlighted again.

This is really bad if this image in in the beginning of an album and you try to rate images at the end of the album, because after every rating the view will focus that image and you need to scroll down again.

To reproduce:

1. Go into an album with many images (> 100)
2. Select one image from the first icon row and hit "Find similar" to change the view
3. In "Find similar", click on that image again and hit "go to album".
4. Now scroll down to the last line and rate an image
5. The view will scroll to the image that you selected in "find similar".

This behavior will be true the whole digiKam session, so selecting another album and coming back doesn't solve the problem.

Andi
Comment 1 Andi Clemens 2009-01-10 10:35:45 UTC
Another note:

Select some image, go to another album and return to the previous one, the image that was used with "go to album" is selected again, so this is not only affected by rating images, it seems to be a general update problem.

Andi
Comment 2 Arnd Baecker 2009-01-10 10:53:23 UTC
What you describe in #c1 might be considered  as a feature
and not a bug (see also the wish about remembering the 
slider position for each view, https://bugs.kde.org/show_bug.cgi?id=141708 ).
However, currently this seems more like a side-effect of the issue
described in this bug.
Comment 3 Andi Clemens 2009-01-10 10:56:26 UTC
But this "feature" is not visible when using the album view the normal way, it only seems to appear when using "go to album" from another view.
Feels more like a bug to me, especially when rating images.
Comment 4 Marcel Wiesweg 2009-01-31 23:54:51 UTC
SVN commit 919421 by mwiesweg:

When the item marked with "Go To" actions has been scrolled to once, drop it so that it does not persist.

BUG: 180223

 M  +3 -0      albumiconview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=919421