When the item marked with "Go To" actions has been scrolled to once, drop it so that it does not persist.

BUG: 180223

svn path=/trunk/extragear/graphics/digikam/; revision=919421